tests/invalid_loop/test_uv_idle.php
<?php
$class = 'UVIdle';
require __DIR__ . '/../../test-tools.php';
require __DIR__ . '/error_handler.php';
$idle = new UVIdle(new stdClass());
